--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
@@ -17,6 +18,8 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
@@ -34,7 +37,8 @@
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
