--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
@@ -18,6 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.24.0",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "moment": "^2.29.1",
@@ -34,6 +36,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
