--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.5.6",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
@@ -22,6 +22,7 @@
     "graphql-request": "^3.7.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
+    "react-apollo": "^3.1.5",
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1266.0",
     "react-native-chart-kit": "^6.11.0",
