--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,5 +24,11 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+
+MYAPP_UPLOAD_STORE_FILE=nautricoach.keystore
+MYAPP_UPLOAD_KEY_ALIAS=nautricoach
+MYAPP_UPLOAD_STORE_PASSWORD=nautricoach
+MYAPP_UPLOAD_KEY_PASSWORD=nautricoach
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.93.0
