--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.6",
+    "@apollo/client": "^3.4.16",
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "^3.5.2",
@@ -18,8 +18,9 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.24.0",
-    "graphql": "^16.2.0",
+    "graphql": "^15.7.2",
     "graphql-request": "^3.7.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
@@ -28,7 +29,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-document-picker": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-image-picker": "^4.0.6",
+    "react-native-image-picker": "^4.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.1",
     "react-native-pie": "^1.1.2",
