--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'nutriCoach' do
     use_flipper!()
     pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+    pod 'RNThumbnail', :path => '../node_modules/react-native-thumbnail'
+
     post_install do |installer|
       react_native_post_install(installer)
           installer.pods_project.build_configurations.each do |config| config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] =  "arm64"
