--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-pager-view": "^5.4.1",
     "react-native-pie": "^1.1.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
