--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-thumbnail": "^1.1.3",
     "react-native-vector-icons": "^8.1.0",
     "rn-fetch-blob": "^0.12.0",
     "subscriptions-transport-ws": "^0.11.0"
