--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
+    "react-native-send-intent": "^1.3.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^12.1.1",
